code avec geopanda et modification distance

--- a/intro.ipynb
+++ b/intro.ipynb
@@ -2,11 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd \n",
+    "import geopandas as gpd\n",
     "pd.options.mode.chained_assignment = None  # default='warn'"
    ]
   },
@@ -19,16 +20,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "('data/fichier.csv', <http.client.HTTPMessage at 0x205c91f9730>)"
+       "('data/fichier.csv', <http.client.HTTPMessage at 0x1a4368fc7f0>)"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -40,16 +41,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "('data/fichier_inst.csv', <http.client.HTTPMessage at 0x205db133400>)"
+       "('data/fichier_inst.csv', <http.client.HTTPMessage at 0x1a4368f7ca0>)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -60,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,16 +79,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = pd.read_csv('data\\prix-carburants-fichier-quotidien-test-ods.csv', sep= ';', on_bad_lines= 'skip')"
+    "data = pd.read_csv('data/prix-carburants-fichier-quotidien-test-ods.csv', sep= ';', on_bad_lines= 'skip')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -103,7 +104,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -122,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,177 +139,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
     "data_2 = data_carb(data, 'SP95').sort_values('prix_valeur')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 59,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>adresse</th>\n",
-       "      <th>ville</th>\n",
-       "      <th>geom</th>\n",
-       "      <th>prix_valeur</th>\n",
-       "      <th>prix_nom</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>2601</th>\n",
-       "      <td>Avenue de l'Orme à Martin</td>\n",
-       "      <td>Courcouronnes</td>\n",
-       "      <td>48.631,2.417</td>\n",
-       "      <td>1.169</td>\n",
-       "      <td>SP95</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2737</th>\n",
-       "      <td>18 Grande Rue</td>\n",
-       "      <td>DOZULé</td>\n",
-       "      <td>49.231,-0.044</td>\n",
-       "      <td>1.290</td>\n",
-       "      <td>SP95</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>65471</th>\n",
-       "      <td>13 Avenue Ampère</td>\n",
-       "      <td>MONTIGNY-LE-BRETONNEUX</td>\n",
-       "      <td>48.798,2.048</td>\n",
-       "      <td>1.423</td>\n",
-       "      <td>SP95</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10380</th>\n",
-       "      <td>le bourg</td>\n",
-       "      <td>Groléjac</td>\n",
-       "      <td>44.820868467717006,1.2905781261784</td>\n",
-       "      <td>1.473</td>\n",
-       "      <td>SP95</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14519</th>\n",
-       "      <td>531 Route de Strasbourg</td>\n",
-       "      <td>VIRIAT</td>\n",
-       "      <td>46.236,5.263</td>\n",
-       "      <td>1.481</td>\n",
-       "      <td>SP95</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8063</th>\n",
-       "      <td>23 Boulevard Victor Hugo</td>\n",
-       "      <td>Saint-Ouen</td>\n",
-       "      <td>48.911,2.332</td>\n",
-       "      <td>2.290</td>\n",
-       "      <td>SP95</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>24100</th>\n",
-       "      <td>8,10,10bis Rue Bailleul</td>\n",
-       "      <td>PARIS</td>\n",
-       "      <td>48.861,2.341</td>\n",
-       "      <td>2.370</td>\n",
-       "      <td>SP95</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11249</th>\n",
-       "      <td>15 Avenue Duquesne</td>\n",
-       "      <td>PARIS</td>\n",
-       "      <td>48.853,2.308</td>\n",
-       "      <td>2.600</td>\n",
-       "      <td>SP95</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>43085</th>\n",
-       "      <td>69 Avenue Kléber</td>\n",
-       "      <td>Paris</td>\n",
-       "      <td>48.865,2.289</td>\n",
-       "      <td>2.690</td>\n",
-       "      <td>SP95</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>64399</th>\n",
-       "      <td>175 Avenue Ledru-Rollin</td>\n",
-       "      <td>PARIS</td>\n",
-       "      <td>48.85667,2.3791</td>\n",
-       "      <td>2.900</td>\n",
-       "      <td>SP95</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>3758 rows × 5 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                         adresse                   ville  \\\n",
-       "2601   Avenue de l'Orme à Martin           Courcouronnes   \n",
-       "2737               18 Grande Rue                  DOZULé   \n",
-       "65471           13 Avenue Ampère  MONTIGNY-LE-BRETONNEUX   \n",
-       "10380                   le bourg                Groléjac   \n",
-       "14519    531 Route de Strasbourg                  VIRIAT   \n",
-       "...                          ...                     ...   \n",
-       "8063    23 Boulevard Victor Hugo              Saint-Ouen   \n",
-       "24100    8,10,10bis Rue Bailleul                   PARIS   \n",
-       "11249         15 Avenue Duquesne                   PARIS   \n",
-       "43085           69 Avenue Kléber                   Paris   \n",
-       "64399    175 Avenue Ledru-Rollin                   PARIS   \n",
-       "\n",
-       "                                     geom  prix_valeur prix_nom  \n",
-       "2601                         48.631,2.417        1.169     SP95  \n",
-       "2737                        49.231,-0.044        1.290     SP95  \n",
-       "65471                        48.798,2.048        1.423     SP95  \n",
-       "10380  44.820868467717006,1.2905781261784        1.473     SP95  \n",
-       "14519                        46.236,5.263        1.481     SP95  \n",
-       "...                                   ...          ...      ...  \n",
-       "8063                         48.911,2.332        2.290     SP95  \n",
-       "24100                        48.861,2.341        2.370     SP95  \n",
-       "11249                        48.853,2.308        2.600     SP95  \n",
-       "43085                        48.865,2.289        2.690     SP95  \n",
-       "64399                     48.85667,2.3791        2.900     SP95  \n",
-       "\n",
-       "[3758 rows x 5 columns]"
-      ]
-     },
-     "execution_count": 59,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "data_2"
    ]
   },
   {
@@ -320,23 +155,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from math import cos, sin, acos \n",
+    "from math import sin, cos, acos, pi\n",
+    " \n",
+    "def dms2dd(d, m, s):\n",
+    "    \"\"\"Convertit un angle \"degrés minutes secondes\" en \"degrés décimaux\"\n",
+    "    \"\"\"\n",
+    "    return d + m/60 + s/3600\n",
+    " \n",
+    "def dd2dms(dd):\n",
+    "    \"\"\"Convertit un angle \"degrés décimaux\" en \"degrés minutes secondes\"\n",
+    "    \"\"\"\n",
+    "    d = int(dd)\n",
+    "    x = (dd-d)*60\n",
+    "    m = int(x)\n",
+    "    s = (x-m)*60\n",
+    "    return d, m, s\n",
+    " \n",
+    "def deg2rad(dd):\n",
+    "    \"\"\"Convertit un angle \"degrés décimaux\" en \"radians\"\n",
+    "    \"\"\"\n",
+    "    return dd/180*pi\n",
+    " \n",
     "\n",
-    "def distance1(p1,p2):\n",
-    "    lat1,long1 = p1\n",
-    "    lat2,long2 = p2\n",
-    "    dlong = long2 - long1\n",
-    "    dist_ang = acos(sin(lat1)*sin(lat2) + cos(lat1)*cos(lat2)*cos(dlong))\n",
-    "    return(6378137*dist_ang)"
+    "def rad2deg(rd):\n",
+    "    \"\"\"Convertit un angle \"radians\" en \"degrés décimaux\"\n",
+    "    \"\"\"\n",
+    "    return rd/pi*180\n",
+    " \n",
+    "#############################################################################\n",
+    "def distanceGPS(p1, p2):\n",
+    "    \"\"\"Retourne la distance en mètres entre les 2 points A et B connus grâce à\n",
+    "       leurs coordonnées GPS (en radians).\n",
+    "    \"\"\"\n",
+    "    latA, longA = p1\n",
+    "    latB, longB = p2\n",
+    "    # Rayon de la terre en mètres (sphère IAG-GRS80)\n",
+    "    RT = 6378137\n",
+    "    # angle en radians entre les 2 points\n",
+    "    S = acos(sin(latA)*sin(latB) + cos(latA)*cos(latB)*cos(abs(longB-longA)))\n",
+    "    # distance entre les 2 points, comptée sur un arc de grand cercle\n",
+    "    return S*RT\n",
+    "\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -345,7 +214,7 @@
        "'48.7087952,2.1742033'"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -374,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -383,7 +252,7 @@
     "    pos = list(map(float,Adresse_to_gps(posi).split(',')))\n",
     "    def distancetoposi(p2):\n",
     "        pos_carb = list(map(float, p2.split(',')))\n",
-    "        return distance1(pos, pos_carb)\n",
+    "        return distanceGPS(pos, pos_carb)\n",
     "    new_df = data_1['geom'].apply(distancetoposi).sort_values().head(10)\n",
     "    return data_1.loc[new_df.index.to_list()]\n",
     "\n",
@@ -394,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -427,31 +296,31 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>18723</th>\n",
+       "      <th>1138</th>\n",
        "      <td>69 Avenue Charles de Gaulle</td>\n",
        "      <td>MORANGIS</td>\n",
        "      <td>48.706,2.343</td>\n",
-       "      <td>1.759</td>\n",
+       "      <td>1.739</td>\n",
        "      <td>SP95</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>43435</th>\n",
+       "      <th>3873</th>\n",
        "      <td>Rue de la Ballastière</td>\n",
        "      <td>Ligny-en-Barrois</td>\n",
        "      <td>48.677,5.326</td>\n",
-       "      <td>1.700</td>\n",
+       "      <td>1.631</td>\n",
        "      <td>SP95</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>38126</th>\n",
+       "      <th>28782</th>\n",
        "      <td>180 ROUTE NATIONALE 7</td>\n",
        "      <td>ATHIS-MONS</td>\n",
        "      <td>48.712,2.371</td>\n",
-       "      <td>1.709</td>\n",
+       "      <td>1.619</td>\n",
        "      <td>SP95</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>50277</th>\n",
+       "      <th>19739</th>\n",
        "      <td>KERGUENNEC</td>\n",
        "      <td>ROSCOFF</td>\n",
        "      <td>48.71344,-3.98569</td>\n",
@@ -459,23 +328,23 @@
        "      <td>SP95</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5332</th>\n",
+       "      <th>3542</th>\n",
        "      <td>lieudit le village</td>\n",
        "      <td>Les Essarts-le-Roi</td>\n",
        "      <td>48.71419,1.92645</td>\n",
-       "      <td>1.745</td>\n",
+       "      <td>1.689</td>\n",
        "      <td>SP95</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>10514</th>\n",
+       "      <th>17396</th>\n",
        "      <td>RUE DU GENERAL DE GAULLE</td>\n",
        "      <td>AVRANCHES</td>\n",
        "      <td>48.68647,-1.36356</td>\n",
-       "      <td>1.819</td>\n",
+       "      <td>1.769</td>\n",
        "      <td>SP95</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>46246</th>\n",
+       "      <th>9728</th>\n",
        "      <td>PLACE DE BEAUPLAN</td>\n",
        "      <td>SAINT-RéMY-LèS-CHEVREUSE</td>\n",
        "      <td>48.716,2.085</td>\n",
@@ -483,15 +352,15 @@
        "      <td>SP95</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>18710</th>\n",
+       "      <th>30751</th>\n",
        "      <td>72 Avenue Jean Jaurès</td>\n",
        "      <td>Montgeron</td>\n",
        "      <td>48.716,2.446</td>\n",
-       "      <td>1.770</td>\n",
+       "      <td>1.740</td>\n",
        "      <td>SP95</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>13697</th>\n",
+       "      <th>26596</th>\n",
        "      <td>118 Rue de la Passerelle</td>\n",
        "      <td>CHILLY-MAZARIN</td>\n",
        "      <td>48.69943,2.32057</td>\n",
@@ -499,11 +368,11 @@
        "      <td>SP95</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>18347</th>\n",
+       "      <th>4112</th>\n",
        "      <td>120A ROUTE NATIONALE</td>\n",
        "      <td>GAMBSHEIM</td>\n",
        "      <td>48.699248714218,7.889266294415299</td>\n",
-       "      <td>1.589</td>\n",
+       "      <td>1.559</td>\n",
        "      <td>SP95</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -512,37 +381,37 @@
       ],
       "text/plain": [
        "                           adresse                     ville  \\\n",
-       "18723  69 Avenue Charles de Gaulle                  MORANGIS   \n",
-       "43435        Rue de la Ballastière          Ligny-en-Barrois   \n",
-       "38126        180 ROUTE NATIONALE 7                ATHIS-MONS   \n",
-       "50277                   KERGUENNEC                   ROSCOFF   \n",
-       "5332            lieudit le village        Les Essarts-le-Roi   \n",
-       "10514     RUE DU GENERAL DE GAULLE                 AVRANCHES   \n",
-       "46246            PLACE DE BEAUPLAN  SAINT-RéMY-LèS-CHEVREUSE   \n",
-       "18710        72 Avenue Jean Jaurès                 Montgeron   \n",
-       "13697     118 Rue de la Passerelle            CHILLY-MAZARIN   \n",
-       "18347         120A ROUTE NATIONALE                 GAMBSHEIM   \n",
+       "1138   69 Avenue Charles de Gaulle                  MORANGIS   \n",
+       "3873         Rue de la Ballastière          Ligny-en-Barrois   \n",
+       "28782        180 ROUTE NATIONALE 7                ATHIS-MONS   \n",
+       "19739                   KERGUENNEC                   ROSCOFF   \n",
+       "3542            lieudit le village        Les Essarts-le-Roi   \n",
+       "17396     RUE DU GENERAL DE GAULLE                 AVRANCHES   \n",
+       "9728             PLACE DE BEAUPLAN  SAINT-RéMY-LèS-CHEVREUSE   \n",
+       "30751        72 Avenue Jean Jaurès                 Montgeron   \n",
+       "26596     118 Rue de la Passerelle            CHILLY-MAZARIN   \n",
+       "4112          120A ROUTE NATIONALE                 GAMBSHEIM   \n",
        "\n",
        "                                    geom  prix_valeur prix_nom  \n",
-       "18723                       48.706,2.343        1.759     SP95  \n",
-       "43435                       48.677,5.326        1.700     SP95  \n",
-       "38126                       48.712,2.371        1.709     SP95  \n",
-       "50277                  48.71344,-3.98569        1.750     SP95  \n",
-       "5332                    48.71419,1.92645        1.745     SP95  \n",
-       "10514                  48.68647,-1.36356        1.819     SP95  \n",
-       "46246                       48.716,2.085        1.737     SP95  \n",
-       "18710                       48.716,2.446        1.770     SP95  \n",
-       "13697                   48.69943,2.32057        1.799     SP95  \n",
-       "18347  48.699248714218,7.889266294415299        1.589     SP95  "
+       "1138                        48.706,2.343        1.739     SP95  \n",
+       "3873                        48.677,5.326        1.631     SP95  \n",
+       "28782                       48.712,2.371        1.619     SP95  \n",
+       "19739                  48.71344,-3.98569        1.750     SP95  \n",
+       "3542                    48.71419,1.92645        1.689     SP95  \n",
+       "17396                  48.68647,-1.36356        1.769     SP95  \n",
+       "9728                        48.716,2.085        1.737     SP95  \n",
+       "30751                       48.716,2.446        1.740     SP95  \n",
+       "26596                   48.69943,2.32057        1.799     SP95  \n",
+       "4112   48.699248714218,7.889266294415299        1.559     SP95  "
       ]
      },
-     "execution_count": 65,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dix_plus_proche_card(data, \"1 rue d'Arsonval, Orsay, France\" , 'SP95')"
+    "dix_plus_proche_card(dat_inst, \"1 rue d'Arsonval, Orsay, France\" , 'SP95')"
    ]
   }
  ],
