--- a/Arman.ipynb
+++ b/Arman.ipynb
@@ -98,11 +98,12 @@
     "#Coordonées --> adresse \n",
     "\n",
     "from geopy.geocoders import Nominatim\n",
-    "geolocator = Nominatim(user_agent=\"Projet Python\")\n",
-    "location = geolocator.reverse(\"52.509669, 13.376294\")\n",
-    "print(location.address)\n",
-    "print((location.latitude, location.longitude))\n",
-    "print(location.raw)\n"
+    "\n",
+    "def Gps_to_adresse(coord):\n",
+    "    geolocator = Nominatim(user_agent=\"Projet Python\")\n",
+    "    location = geolocator.reverse(coord)\n",
+    "    return location \n",
+    "\n"
    ]
   },
   {
@@ -218,7 +219,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.0 64-bit",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -232,12 +233,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.0"
+   "version": "3.9.13 (tags/v3.9.13:6de2ca5, May 17 2022, 16:36:42) [MSC v.1929 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "ee4c60ed9f2d143d855c3de7cdf8e81ef9399a07140d5084c19be7d5d534dff2"
+    "hash": "b49ab16f02f294ae267a674cbb49c428cfb2ab8f5024afc5c58c85bfa43db9ee"
    }
   }
  },
