--- a/4. gpd.ipynb
+++ b/4. gpd.ipynb
@@ -64,7 +64,8 @@
    "outputs": [],
    "source": [
     "G = ox.add_edge_speeds(G) #Impute\n",
-    "G = ox.add_edge_travel_times(G)"
+    "G = ox.add_edge_travel_times(G)\n",
+    "G = ox.add_edge_lengths(G)"
    ]
   },
   {
